Fixed spacing issues

--- a/resume/styles/styles.sass
+++ b/resume/styles/styles.sass
@@ -27,7 +27,8 @@ body
   font-family: "Fira Sans", sans-serif
   font-size: 9pt
   font-weight: 300
-  line-height: 1.4em
+  line-height: 1.3em
+  letter-spacing: -0.3px
   padding: 0
   margin: 0
   hyphens: auto
